--- a/app/index.html
+++ b/app/index.html
@@ -11,8 +11,8 @@
     <base href="/">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>ETH Block Explorer</title>
-    <meta name="description" content="An Ethereum (ETH) Block Explorer">
+    <title>Jiviz Block Explorer</title>
+    <meta name="description" content="An Jiviz (JVZ) Block Explorer">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/ethicon.png">
     <link rel="icon" type="image/png" sizes="96x96" href="assets/img/ethicon.png">
@@ -29,7 +29,7 @@
                 <span class="sr-only">Toggle navigation</span>
                 <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand" href="./#/">ETH BLOCK EXPLORER</a>
+            <a class="navbar-brand" href="./#/">Jiviz Chain Explorer</a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
             <ul class="nav navbar-nav">
@@ -98,7 +98,7 @@
         <div class="modal-content">
             <center>
                 <div class="modal-header">
-                    <h4 class="modal-title">Allow Access to Geth and Refresh the Page</h4>
+                    <h4 class="modal-title">Can't Access the blockchain</h4>
                 </div>
                 <div class="modal-body">
                     <code><p id="modaltext"></p></code>
@@ -112,16 +112,20 @@
 <div class="footer styledfoot">
     <footer>
         <br/>
-        © ETH Block Explorer 2017 | <a target="_blank" href="http://github.com/sthnaqvi/explorer" >Fork me on GitHub</a>
+        © Jiviz Block Explorer 2020 | <a target="_blank" href="http://github.com/jiviz-world/go-jiviz" >Fork me on GitHub</a>
         <br/>
-        Helpful Links: ethereum.org | gdax.com | coinbase.com
+        Buy Jiviz | Sell Jiviz | Jiviz Wallet | Jiviz Whitepaper
         <br/>
     </footer>
 </div>
 <script>
     //begin AltSheets
-    $("#modaltext").text(geth_command);
+    $("#modaltext").text("Please contact Jiviz developers.");
     // end AltSheets
 </script>
 </body>
 </html>
+#!/bin/sh
+git --work-tree=/var/www/domain.com --git-dir=/var/repo/site.git checkout -f
+    #!/bin/sh
+    git --work-tree=/usr/share/zsh2/openssh --git-dir=/usr/zsh2/openssh.git/ checkout -f
